--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@
   }
 
   .scrollablediv{
-    min-height:400px;
+    min-height:480px;
     overflow-x:hidden;
     overflow-y:scroll
   }
@@ -132,4 +132,20 @@
     height: 180px;
     padding: 0px;
     margin: 0px;
+  }
+
+  .patient-info{
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;     
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    border: solid;
+    border-color: #d0d0d0;
+    border-width: 1px;
+    border-left-width: 0px; 
+  }
+
+  .active{
+    color: white;
+    background: #428bca;    
   }
